--- a/.github/workflows/api-deployment.yml
+++ b/.github/workflows/api-deployment.yml
@@ -1,49 +1,51 @@
-name: Build, Test and Deploy Express App
+name: Build, Test and Deploy Go App
 
 on:
   push:
     branches:
       - main
-    paths:
-      - 'server/**'
   pull_request:
-    paths:
-      - 'server/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NODE_ENV: production
+      GO_ENV: production
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18.17.0'
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.18"
 
-    - name: Install dependencies
-      working-directory: server
-      run: npm install
+      - name: Install dependencies
+        run: go mod tidy
 
-    - name: Run tests
-      working-directory: server
-      run: npm test
+      - name: Run tests
+        run: go test ./...
 
-    - name: Build app
-      working-directory: server
-      run: npm run build
+      - name: Log in to Docker Hub
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-    - name: Deploy to Server
-      working-directory: server
-      run: |
-        scp -r . user@yourserver:/path/to/deploy
-        ssh user@yourserver 'systemctl restart your-express-app-service'
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SSH_HOST: ${{ secrets.SSH_HOST }}
-        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+
+      - name: Deploy to Server
+        run: |
+          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} user@${{ secrets.SSH_HOST }} << EOF
+            docker pull ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+            docker stop myapp || true
+            docker rm myapp || true
+            docker run -d --name myapp -p 80:80 --env-file /path/to/env/file ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+          EOF
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
